--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello jo</h1>
+    <h1>learning git hub</h1>
 </body>
 </html>
